<?xml version="1.0"?>
<package format="2">

  <name>gtsam_vio</name>
  <version>0.0.1</version>
  <description>Visual-Inertial State Estimation using GTSAM</description>

  <maintainer email="vvasilo@seas.upenn.edu">Vasileios Vasilopoulos</maintainer>

  <license>BSD</license>

  <author email="vvasilo@seas.upenn.edu">Vasileios Vasilopoulos</author>
  <author email="vkopli@seas.upenn.edu">Vidula Kopli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>random_numbers</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>suitesparse</depend>

  <test_depend>rosunit</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
